added cox regression assumption checks

--- a/mahsa/cox_kaplan_analysis.ipynb
+++ b/mahsa/cox_kaplan_analysis.ipynb
@@ -1681,7 +1681,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\zfvah\\AppData\\Local\\Temp\\ipykernel_13560\\3391465230.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\zfvah\\AppData\\Local\\Temp\\ipykernel_17064\\3391465230.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  clinic_data_cleaned.replace({'NE': np.nan}, inplace=True)\n"
      ]
     }
@@ -2141,7 +2141,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\zfvah\\AppData\\Local\\Temp\\ipykernel_13560\\2647843388.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\zfvah\\AppData\\Local\\Temp\\ipykernel_17064\\2647843388.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -2720,7 +2720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 71,
    "id": "8e2ae651",
    "metadata": {},
    "outputs": [],
@@ -2772,6 +2772,11 @@
     "            \n",
     "            summary = cph.summary\n",
     "            \n",
+    "            # test proportional hazards assumption only for significant features\n",
+    "            if summary.loc[feature, 'p'] <= 0.05:\n",
+    "                cph.check_assumptions(X_scaled[[feature, T_col, E_col]], p_value_threshold=0.05, show_plots=False)\n",
+    "                \n",
+    "\n",
     "            results.append({\n",
     "                'feature': feature,\n",
     "                'HR': summary.loc[feature, 'exp(coef)'],\n",
@@ -2783,6 +2788,7 @@
     "            \n",
     "        except Exception as e:\n",
     "            print(f\"Could not fit Cox model for {feature}: {e}\")\n",
+    "\n",
     "    \n",
     "    return pd.DataFrame(results)\n",
     "\n"
@@ -2869,10 +2875,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 72,
    "id": "536d6b9a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -3078,7 +3105,7 @@
        "109  1.972555  "
       ]
      },
-     "execution_count": 69,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3109,7 +3136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 73,
    "id": "ed2b4386",
    "metadata": {},
    "outputs": [],
@@ -3125,7 +3152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 74,
    "id": "c63b8afa",
    "metadata": {},
    "outputs": [
@@ -3135,7 +3162,7 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3157,7 +3184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 75,
    "id": "b317635e",
    "metadata": {},
    "outputs": [],
@@ -3177,7 +3204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 76,
    "id": "4ab9cd34",
    "metadata": {},
    "outputs": [],
@@ -3188,7 +3215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 77,
    "id": "380e302b",
    "metadata": {},
    "outputs": [],
@@ -3201,7 +3228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 78,
    "id": "f30a38ae",
    "metadata": {},
    "outputs": [],
@@ -3213,7 +3240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 79,
    "id": "ec3e3300",
    "metadata": {},
    "outputs": [
@@ -3223,7 +3250,7 @@
        "np.int64(0)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3234,7 +3261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 80,
    "id": "89627df3",
    "metadata": {},
    "outputs": [
@@ -3244,7 +3271,7 @@
        "(28, 173)"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3255,17 +3282,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 81,
    "id": "d211fd12",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n",
+      "Proportional hazard assumption looks okay.\n"
+     ]
+    }
+   ],
    "source": [
     "results_df_pfs = cox_univariate_analysis(modelling_data_pfs, T_col='PFS', E_col='PFS_status')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 82,
    "id": "d835d871",
    "metadata": {},
    "outputs": [
@@ -3433,7 +3473,7 @@
        "[110 rows x 6 columns]"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3444,7 +3484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 83,
    "id": "31735253",
    "metadata": {},
    "outputs": [
@@ -3546,7 +3586,7 @@
        "105  Number of lesions_b  1.545029  0.044346  1.011060  2.361002  2.010802"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 83,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3557,7 +3597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 84,
    "id": "a34e5a90",
    "metadata": {},
    "outputs": [],
@@ -3569,7 +3609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 85,
    "id": "830b5e04",
    "metadata": {},
    "outputs": [
@@ -3579,7 +3619,7 @@
        "array([], dtype=float64)"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 85,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3598,7 +3638,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 86,
    "id": "bd96ecd4",
    "metadata": {},
    "outputs": [
@@ -3650,7 +3690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 87,
    "id": "0139291b",
    "metadata": {},
    "outputs": [
@@ -3712,12 +3752,6 @@
     "\n",
     "This visualization helps understand how quickly events occur over time and estimate median survival times or probabilities at specific time points."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "dee6220c",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
