--- a/ali/pilot_ML.ipynb
+++ b/ali/pilot_ML.ipynb
@@ -4234,7 +4234,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_23920/2612493327.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_30101/2612493327.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -5239,7 +5239,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_23920/3391465230.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_30101/3391465230.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  clinic_data_cleaned.replace({'NE': np.nan}, inplace=True)\n"
      ]
     }
@@ -6188,7 +6188,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_23920/2647843388.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_30101/2647843388.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -6207,7 +6207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 68,
    "id": "097752ad",
    "metadata": {},
    "outputs": [
@@ -6272,7 +6272,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 68,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6283,7 +6283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 69,
    "id": "5528d531",
    "metadata": {},
    "outputs": [
@@ -6313,7 +6313,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 69,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6324,7 +6324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 70,
    "id": "fe8fd1e8",
    "metadata": {},
    "outputs": [],
@@ -6350,7 +6350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 71,
    "id": "d914b033",
    "metadata": {},
    "outputs": [
@@ -6360,7 +6360,7 @@
        "(29, 44)"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6371,7 +6371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 72,
    "id": "232abc1e",
    "metadata": {},
    "outputs": [
@@ -6381,7 +6381,7 @@
        "0"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 72,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6391,9 +6391,181 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "5d040a51",
+   "metadata": {},
+   "source": [
+    "# Model training and evaluation"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9aab38ff",
+   "metadata": {},
+   "source": [
+    "## Define target (y) and predictor matrix (X)\n",
+    "\n",
+    "We formulate the problem as a **binary classification task** where the outcome variable is:\n",
+    "\n",
+    "- **`y = surv_status`**\n",
+    "  - `0` = alive / censored  \n",
+    "  - `1` = death event  \n",
+    "\n",
+    "### Important considerations\n",
+    "\n",
+    "- **Identifier columns** (e.g. `id_cleaned`) are removed from the feature matrix `X` because they do not carry clinical information and may introduce spurious patterns.\n",
+    "- **Other survival- or response-related variables** are also excluded from `X` to avoid *conceptual leakage*.  \n",
+    "  These variables represent outcomes or follow-up information and would artificially inflate model performance if used as predictors.\n",
+    "\n",
+    "After this step:\n",
+    "- `y` contains only the target labels.\n",
+    "- `X` contains baseline predictor variables only and may still include missing values, which will be handled later within a modeling pipeline.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "9a985cde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# define y(label) and X\n",
+    "y = clinic_data_cleaned[\"surv_status\"].astype(int)\n",
+    "exclude_from_X = [\n",
+    "    \"surv_status\",\n",
+    "    \"id_cleaned\",\n",
+    "    \"surv_bestresponse_car\",\n",
+    "    \"surv_time_bestresponse_car\",\n",
+    "    \"surv_prog_after_car\",\n",
+    "]\n",
+    "\n",
+    "# Keep only columns that actually exist\n",
+    "exclude_from_X = [c for c in exclude_from_X if c in clinic_data_cleaned.columns]\n",
+    "X = clinic_data_cleaned.drop(columns=exclude_from_X)\n",
+    "\n",
+    "# Sanity checks\n",
+    "assert y.isna().sum() == 0, \"Target contains missing values (labels must not be imputed).\"\n",
+    "assert X.shape[0] == y.shape[0], \"X and y row counts do not match.\"\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "e11d030c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X shape: (29, 39)\n",
+      "y distribution:\n",
+      " surv_status\n",
+      "0    16\n",
+      "1    13\n",
+      "Name: count, dtype: int64\n",
+      "object columns: 0\n",
+      "Total NaNs in X: 0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"X shape:\", X.shape)                 # expect: (29, number_of_features)\n",
+    "print(\"y distribution:\\n\", y.value_counts())\n",
+    "print(\"object columns:\", X.select_dtypes(include=\"object\").shape[1])\n",
+    "print(\"Total NaNs in X:\", X.isna().sum().sum())\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a705f7aa",
+   "metadata": {},
+   "source": [
+    "- **`object columns: 0`**  \n",
+    "  There are no remaining non-numeric (object/string) columns in X.  \n",
+    "  This is required because models like SVM (and preprocessing steps like StandardScaler) expect numeric input.\n",
+    "\n",
+    "- **`Total NaNs in X: 20`**  \n",
+    "  The feature matrix still contains 20 missing values across all predictors.  \n",
+    "  This is expected at this stage because we do not impute missing values globally (which could cause data leakage).  \n",
+    "  Instead, missing values will be handled later using an imputer inside the scikit-learn Pipeline, fitted only on the training data.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "672ae08e",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "1f88380d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train shape: (23, 39) Test shape: (6, 39)\n",
+      "y_train distribution:\n",
+      " surv_status\n",
+      "0    13\n",
+      "1    10\n",
+      "Name: count, dtype: int64\n",
+      "y_test distribution:\n",
+      " surv_status\n",
+      "0    3\n",
+      "1    3\n",
+      "Name: count, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# split\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y,\n",
+    "    test_size=0.2,\n",
+    "    stratify=y,\n",
+    "    random_state=42\n",
+    ")\n",
+    "\n",
+    "# quick checks\n",
+    "print(\"Train shape:\", X_train.shape, \"Test shape:\", X_test.shape)\n",
+    "print(\"y_train distribution:\\n\", y_train.value_counts())\n",
+    "print(\"y_test distribution:\\n\", y_test.value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "id": "c3b4713e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# pipeline\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "svm_pipeline = Pipeline(steps=[\n",
+    "    (\"imputer\", SimpleImputer(strategy=\"median\")),\n",
+    "    (\"scaler\", StandardScaler()),\n",
+    "    (\"svm\", SVC(\n",
+    "        kernel=\"rbf\",\n",
+    "        class_weight=\"balanced\",\n",
+    "        random_state=42\n",
+    "    ))\n",
+    "])"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba386954",
+   "id": "c44641b4",
    "metadata": {},
    "outputs": [],
    "source": []
