Add logistic Regression Model

--- a/analysis_ML_z.ipynb
+++ b/analysis_ML_z.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "45b5d289",
    "metadata": {},
    "outputs": [],
@@ -26,6 +26,8 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "import time\n",
     "import os\n",
     "import yaml"
    ]
@@ -5079,7 +5081,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ztahe\\AppData\\Local\\Temp\\ipykernel_29648\\2612493327.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\ztahe\\AppData\\Local\\Temp\\ipykernel_24236\\2612493327.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -6084,7 +6086,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ztahe\\AppData\\Local\\Temp\\ipykernel_29648\\3391465230.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "C:\\Users\\ztahe\\AppData\\Local\\Temp\\ipykernel_24236\\3391465230.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  clinic_data_cleaned.replace({'NE': np.nan}, inplace=True)\n"
      ]
     }
@@ -7033,7 +7035,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\ztahe\\AppData\\Local\\Temp\\ipykernel_29648\\2647843388.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
+      "C:\\Users\\ztahe\\AppData\\Local\\Temp\\ipykernel_24236\\2647843388.py:4: FutureWarning: A value is trying to be set on a copy of a DataFrame or Series through chained assignment using an inplace method.\n",
       "The behavior will change in pandas 3.0. This inplace method will never work because the intermediate object on which we are setting values always behaves as a copy.\n",
       "\n",
       "For example, when doing 'df[col].method(value, inplace=True)', try using 'df.method({col: value}, inplace=True)' or df[col] = df[col].method(value) instead, to perform the operation inplace on the original object.\n",
@@ -7411,7 +7413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 79,
    "id": "aae19d4e",
    "metadata": {},
    "outputs": [
@@ -7466,7 +7468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 80,
    "id": "2b5459d9",
    "metadata": {},
    "outputs": [
@@ -7537,7 +7539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "id": "4f699925",
    "metadata": {},
    "outputs": [
@@ -7626,7 +7628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 82,
    "id": "d05c6086",
    "metadata": {},
    "outputs": [
@@ -7688,6 +7690,412 @@
    "source": [
     "**The test accuracy and balanced accuracy are 0.83, which looks good. However, the test set is very small and contains only six samples. Because the train–test split is random, the test accuracy can change a lot if the data is split again.\n",
     "With such a small test set, even one misclassified sample can significantly reduce the accuracy. Therefore, the test results may be optimistic and do not fully represent the true model performance. For this reason, the cross-validation results are considered more reliable than the test accuracy.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b094642",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e51584b0",
+   "metadata": {},
+   "source": [
+    "# **2) Logistic Regression**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "785d7785",
+   "metadata": {},
+   "source": [
+    "## **Logistic Regression Classifier**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "74b6aaaa",
+   "metadata": {},
+   "source": [
+    "### **2.1) IMPORT LIBRARIES**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "fa5c3472",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "======================================================================\n",
+      "                    LOGISTIC REGRESSION\n",
+      "======================================================================\n",
+      "\n",
+      "✅ Libraries imported successfully!\n"
+     ]
+    }
+   ],
+   "source": [
+    "\"\"\"\n",
+    "================================================================================\n",
+    "LOGISTIC REGRESSION - Simple & Fast (Uses existing features)\n",
+    "================================================================================\n",
+    "\n",
+    "# **Logistic Regression Classifier**\n",
+    "\n",
+    "Simple linear model with regularization - better suited for small samples!\n",
+    "\"\"\"\n",
+    "\n",
+    "# =============================================================================\n",
+    "# IMPORT LIBRARIES\n",
+    "# =============================================================================\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.model_selection import cross_val_score, StratifiedKFold\n",
+    "from sklearn.metrics import (\n",
+    "    accuracy_score, precision_score, recall_score, f1_score,\n",
+    "    roc_auc_score, matthews_corrcoef, log_loss, confusion_matrix,\n",
+    "    classification_report, roc_curve, auc\n",
+    ")\n",
+    "\n",
+    "\n",
+    "print(\"=\"*70)\n",
+    "print(\" \"*20 + \"LOGISTIC REGRESSION\")\n",
+    "print(\"=\"*70)\n",
+    "print(\"\\n✅ Libraries imported successfully!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d78c0487",
+   "metadata": {},
+   "source": [
+    "### **2.2) Configure Model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 84,
+   "id": "3d40c6c7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "LOGISTIC REGRESSION CONFIGURATION & TRAINING\n",
+      "======================================================================\n",
+      "\n",
+      "📋 Model Configuration:\n",
+      "   Regularization (C): 0.1\n",
+      "   Penalty: l2 (Ridge)\n",
+      "   Solver: lbfgs\n",
+      "   Class Weight: balanced\n",
+      "\n",
+      "📊 Dataset Info:\n",
+      "   Training samples: 23\n",
+      "   Test samples: 6\n",
+      "   Features: 39\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"LOGISTIC REGRESSION CONFIGURATION & TRAINING\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "# Configure model with strong regularization\n",
+    "lr_model = LogisticRegression(\n",
+    "    C=0.1,                    # Strong regularization (prevents overfitting)\n",
+    "    penalty='l2',             # L2 = Ridge (standard choice)\n",
+    "    solver='lbfgs',           # Best general-purpose solver\n",
+    "    max_iter=1000,            # Ensure convergence\n",
+    "    random_state=42,          # Reproducibility\n",
+    "    class_weight='balanced',  # Handle class imbalance\n",
+    ")\n",
+    "\n",
+    "print(\"\\n📋 Model Configuration:\")\n",
+    "print(f\"   Regularization (C): {lr_model.C}\")\n",
+    "print(f\"   Penalty: {lr_model.penalty} (Ridge)\")\n",
+    "print(f\"   Solver: {lr_model.solver}\")\n",
+    "print(f\"   Class Weight: {lr_model.class_weight}\")\n",
+    "\n",
+    "print(f\"\\n📊 Dataset Info:\")\n",
+    "print(f\"   Training samples: {len(X_train)}\")\n",
+    "print(f\"   Test samples: {len(X_test)}\")\n",
+    "print(f\"   Features: {X_train.shape[1]}\")\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bf8cbe4",
+   "metadata": {},
+   "source": [
+    "### **2.3)  Train the model**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "4db92c97",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "⏱️  Training model...\n",
+      "\n",
+      "✅ Training completed in 0.0050 seconds!\n",
+      "\n",
+      "📊 Model Details:\n",
+      "   Intercept: -0.1362\n",
+      "   Number of coefficients: 39\n",
+      "   Converged in: 9 iterations\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(f\"\\n⏱️  Training model...\")\n",
+    "start_time = time.time()\n",
+    "lr_model.fit(X_train, y_train)\n",
+    "training_time = time.time() - start_time\n",
+    "\n",
+    "print(f\"\\n✅ Training completed in {training_time:.4f} seconds!\")\n",
+    "\n",
+    "# Get model parameters\n",
+    "coefficients = lr_model.coef_[0]\n",
+    "intercept = lr_model.intercept_[0]\n",
+    "\n",
+    "print(f\"\\n📊 Model Details:\")\n",
+    "print(f\"   Intercept: {intercept:.4f}\")\n",
+    "print(f\"   Number of coefficients: {len(coefficients)}\")\n",
+    "print(f\"   Converged in: {lr_model.n_iter_[0]} iterations\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5636c8f",
+   "metadata": {},
+   "source": [
+    "### **2.4) CROSS-VALIDATION**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "e8c9269f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "CROSS-VALIDATION (3-Fold)\n",
+      "======================================================================\n",
+      "\n",
+      "⏱️  Running cross-validation...\n",
+      "\n",
+      "✅ CV completed!\n",
+      "\n",
+      "📊 Fold Scores:\n",
+      "   Fold 1: 0.5000\n",
+      "   Fold 2: 0.3750\n",
+      "   Fold 3: 0.5714\n",
+      "   Mean:   0.4821 ± 0.0812\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"CROSS-VALIDATION (3-Fold)\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "print(\"\\n⏱️  Running cross-validation...\")\n",
+    "\n",
+    "cv_scores = cross_val_score(\n",
+    "    lr_model,\n",
+    "    X_train,\n",
+    "    y_train,\n",
+    "    cv=StratifiedKFold(n_splits=3, shuffle=True, random_state=42),\n",
+    "    scoring='accuracy',\n",
+    "    n_jobs=-1\n",
+    ")\n",
+    "\n",
+    "print(f\"\\n✅ CV completed!\")\n",
+    "print(f\"\\n📊 Fold Scores:\")\n",
+    "print(f\"   Fold 1: {cv_scores[0]:.4f}\")\n",
+    "print(f\"   Fold 2: {cv_scores[1]:.4f}\")\n",
+    "print(f\"   Fold 3: {cv_scores[2]:.4f}\")\n",
+    "print(f\"   Mean:   {cv_scores.mean():.4f} ± {cv_scores.std():.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "18d20a35",
+   "metadata": {},
+   "source": [
+    "### **2.5) PREDICTIONS**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "8a656329",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "GENERATING PREDICTIONS\n",
+      "======================================================================\n",
+      "\n",
+      "✅ Predictions generated!\n",
+      "   Training: 23 predictions\n",
+      "   Test: 6 predictions\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"GENERATING PREDICTIONS\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "# Training predictions\n",
+    "y_train_pred_lr = lr_model.predict(X_train)\n",
+    "y_train_proba_lr = lr_model.predict_proba(X_train)[:, 1]\n",
+    "\n",
+    "# Test predictions\n",
+    "y_test_pred_lr = lr_model.predict(X_test)\n",
+    "y_test_proba_lr = lr_model.predict_proba(X_test)[:, 1]\n",
+    "\n",
+    "print(f\"\\n✅ Predictions generated!\")\n",
+    "print(f\"   Training: {len(y_train_pred_lr)} predictions\")\n",
+    "print(f\"   Test: {len(y_test_pred_lr)} predictions\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56156552",
+   "metadata": {},
+   "source": [
+    "### **2.6)CALCULATE ALL METRICS**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "c7200305",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "PERFORMANCE METRICS\n",
+      "======================================================================\n",
+      "\n",
+      "📊 TRAINING SET:\n",
+      "   Accuracy:  0.9565\n",
+      "   Precision: 0.9091\n",
+      "   Recall:    1.0000\n",
+      "   F1-Score:  0.9524\n",
+      "   ROC-AUC:   0.9846\n",
+      "   MCC:       0.9161\n",
+      "   Log Loss:  0.3803\n",
+      "\n",
+      "📊 TEST SET:\n",
+      "   Accuracy:  0.6667\n",
+      "   Precision: 0.6667\n",
+      "   Recall:    0.6667\n",
+      "   F1-Score:  0.6667\n",
+      "   ROC-AUC:   0.6667\n",
+      "   MCC:       0.3333\n",
+      "   Log Loss:  0.7229\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"PERFORMANCE METRICS\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "# Training metrics\n",
+    "lr_train_acc = accuracy_score(y_train, y_train_pred_lr)\n",
+    "lr_train_prec = precision_score(y_train, y_train_pred_lr, zero_division=0)\n",
+    "lr_train_rec = recall_score(y_train, y_train_pred_lr, zero_division=0)\n",
+    "lr_train_f1 = f1_score(y_train, y_train_pred_lr, zero_division=0)\n",
+    "try:\n",
+    "    lr_train_auc = roc_auc_score(y_train, y_train_proba_lr)\n",
+    "    lr_train_logloss = log_loss(y_train, y_train_proba_lr)\n",
+    "except:\n",
+    "    lr_train_auc = 0.0\n",
+    "    lr_train_logloss = np.nan\n",
+    "lr_train_mcc = matthews_corrcoef(y_train, y_train_pred_lr)\n",
+    "\n",
+    "# Test metrics\n",
+    "lr_test_acc = accuracy_score(y_test, y_test_pred_lr)\n",
+    "lr_test_prec = precision_score(y_test, y_test_pred_lr, zero_division=0)\n",
+    "lr_test_rec = recall_score(y_test, y_test_pred_lr, zero_division=0)\n",
+    "lr_test_f1 = f1_score(y_test, y_test_pred_lr, zero_division=0)\n",
+    "try:\n",
+    "    lr_test_auc = roc_auc_score(y_test, y_test_proba_lr)\n",
+    "    lr_test_logloss = log_loss(y_test, y_test_proba_lr)\n",
+    "except:\n",
+    "    lr_test_auc = 0.0\n",
+    "    lr_test_logloss = np.nan\n",
+    "lr_test_mcc = matthews_corrcoef(y_test, y_test_pred_lr)\n",
+    "\n",
+    "# Display results\n",
+    "print(\"\\n📊 TRAINING SET:\")\n",
+    "print(f\"   Accuracy:  {lr_train_acc:.4f}\")\n",
+    "print(f\"   Precision: {lr_train_prec:.4f}\")\n",
+    "print(f\"   Recall:    {lr_train_rec:.4f}\")\n",
+    "print(f\"   F1-Score:  {lr_train_f1:.4f}\")\n",
+    "print(f\"   ROC-AUC:   {lr_train_auc:.4f}\")\n",
+    "print(f\"   MCC:       {lr_train_mcc:.4f}\")\n",
+    "print(f\"   Log Loss:  {lr_train_logloss:.4f}\")\n",
+    "\n",
+    "print(\"\\n📊 TEST SET:\")\n",
+    "print(f\"   Accuracy:  {lr_test_acc:.4f}\")\n",
+    "print(f\"   Precision: {lr_test_prec:.4f}\")\n",
+    "print(f\"   Recall:    {lr_test_rec:.4f}\")\n",
+    "print(f\"   F1-Score:  {lr_test_f1:.4f}\")\n",
+    "print(f\"   ROC-AUC:   {lr_test_auc:.4f}\")\n",
+    "print(f\"   MCC:       {lr_test_mcc:.4f}\")\n",
+    "print(f\"   Log Loss:  {lr_test_logloss:.4f}\")\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "351d068a",
+   "metadata": {},
+   "source": [
+    "----"
    ]
   }
  ],
