Add Overfitting check

--- a/analysis_ML_z.ipynb
+++ b/analysis_ML_z.ipynb
@@ -7999,7 +7999,7 @@
    "id": "56156552",
    "metadata": {},
    "source": [
-    "### **2.6)CALCULATE ALL METRICS**"
+    "### **2.6) CALCULATE ALL METRICS**"
    ]
   },
   {
@@ -8092,10 +8092,55 @@
   },
   {
    "cell_type": "markdown",
+   "id": "60159ec4",
+   "metadata": {},
+   "source": [
+    "**Logistic regression achieved 66.7% accuracy on the test set, with balanced precision and recall. However, a 29% gap between training (95.7%) and test performance indicates overfitting, likely attributable to the limited sample size relative to feature dimensionality.**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "351d068a",
    "metadata": {},
    "source": [
-    "----"
+    "### **2.7)  Overfitting check**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "422c36e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "⚠️  OVERFITTING CHECK:\n",
+      "   Train-Test Gap: 0.2899\n",
+      "   ⚠️ Moderate overfitting\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "lr_gap = lr_train_acc - lr_test_acc\n",
+    "print(f\"\\n⚠️  OVERFITTING CHECK:\")\n",
+    "print(f\"   Train-Test Gap: {lr_gap:.4f}\")\n",
+    "\n",
+    "if lr_gap < 0.10:\n",
+    "    print(f\"   ✅ Excellent generalization!\")\n",
+    "    status = \"EXCELLENT\"\n",
+    "elif lr_gap < 0.20:\n",
+    "    print(f\"   ✓ Good generalization\")\n",
+    "    status = \"GOOD\"\n",
+    "elif lr_gap < 0.30:\n",
+    "    print(f\"   ⚠️ Moderate overfitting\")\n",
+    "    status = \"MODERATE\"\n",
+    "else:\n",
+    "    print(f\"   ❌ Significant overfitting\")\n",
+    "    status = \"HIGH\""
    ]
   }
  ],
