Add classification report

--- a/analysis_ML_z.ipynb
+++ b/analysis_ML_z.ipynb
@@ -8142,6 +8142,55 @@
     "    print(f\"   ❌ Significant overfitting\")\n",
     "    status = \"HIGH\""
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2818946a",
+   "metadata": {},
+   "source": [
+    "### **2.8) Classification Report**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "ca39db84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "CLASSIFICATION REPORT - TEST SET\n",
+      "======================================================================\n",
+      "\n",
+      "                  precision    recall  f1-score   support\n",
+      "\n",
+      "Class 0 (Alive)       0.67      0.67      0.67         3\n",
+      "Class 1 (Death)       0.67      0.67      0.67         3\n",
+      "\n",
+      "       accuracy                           0.67         6\n",
+      "      macro avg       0.67      0.67      0.67         6\n",
+      "   weighted avg       0.67      0.67      0.67         6\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"CLASSIFICATION REPORT - TEST SET\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "print(\"\\n\", classification_report(\n",
+    "    y_test,\n",
+    "    y_test_pred_lr,\n",
+    "    target_names=['Class 0 (Alive)', 'Class 1 (Death)'],\n",
+    "    zero_division=0\n",
+    "))"
+   ]
   }
  ],
  "metadata": {
