Feature coefficents Analysis

--- a/analysis_ML_z.ipynb
+++ b/analysis_ML_z.ipynb
@@ -7373,7 +7373,35 @@
    "id": "da9e9f78",
    "metadata": {},
    "source": [
-    "### **Knn Model**"
+    "## **1) KNN Model**"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca1d47c9",
+   "metadata": {},
+   "source": [
+    "### **1.1) Import libraries**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6ea2d1d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.model_selection import StratifiedKFold, cross_validate\n",
+    "\n",
+    "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.neighbors import KNeighborsClassifier"
    ]
   },
   {
@@ -7381,18 +7409,16 @@
    "id": "3658e1c7",
    "metadata": {},
    "source": [
-    "## **Split + Scaling**"
+    "### **1.2) Split + Scaling**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": null,
    "id": "2124caea",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X, y, test_size=0.2, random_state=42, stratify=y\n",
@@ -7408,12 +7434,12 @@
    "id": "fa148055",
    "metadata": {},
    "source": [
-    "### **Training model**"
+    "### **1.3) Training Model**"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": null,
    "id": "aae19d4e",
    "metadata": {},
    "outputs": [
@@ -7430,10 +7456,6 @@
     }
    ],
    "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import StratifiedKFold, cross_validate\n",
     "\n",
     "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
@@ -7468,7 +7490,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "2b5459d9",
    "metadata": {},
    "outputs": [
@@ -7482,13 +7504,6 @@
     }
    ],
    "source": [
-    "\n",
-    "from sklearn.model_selection import GridSearchCV, StratifiedKFold\n",
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "\n",
-    "cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
     "\n",
     "# safe max_k for CV folds (approx 80% of train used per fold)\n",
     "safe_max_k = max(1, int(0.8 * X_train.shape[0]))\n",
@@ -7705,15 +7720,7 @@
    "id": "e51584b0",
    "metadata": {},
    "source": [
-    "# **2) Logistic Regression**"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "785d7785",
-   "metadata": {},
-   "source": [
-    "## **Logistic Regression Classifier**"
+    "# **2) Logistic Regression  Classifier**"
    ]
   },
   {
@@ -8190,6 +8197,100 @@
     "    target_names=['Class 0 (Alive)', 'Class 1 (Death)'],\n",
     "    zero_division=0\n",
     "))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ba00592e",
+   "metadata": {},
+   "source": [
+    "### **2.9) Feture Coefficents Analysis**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "id": "99edbc58",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "======================================================================\n",
+      "FEATURE COEFFICIENTS ANALYSIS\n",
+      "======================================================================\n",
+      "\n",
+      "📊 Top 10 Most Important Features:\n",
+      "                  Feature  Coefficient  Abs_Coefficient  Odds_Ratio\n",
+      "           post_cart_ther    -0.297723         0.297723    0.742507\n",
+      "post_cart_ther_spec_2___5     0.277547         0.277547    1.319888\n",
+      "        cli_st_leukocytes     0.241268         0.241268    1.272862\n",
+      "        tr_car_bridg_type    -0.185120         0.185120    0.831005\n",
+      "           ae_summ_crs_v2     0.162140         0.162140    1.176024\n",
+      "                tr_car_br    -0.157863         0.157863    0.853967\n",
+      "         indication_whops    -0.147846         0.147846    0.862564\n",
+      " indication_res_last_ther    -0.122410         0.122410    0.884786\n",
+      "     tr_car_bridg_reg___7    -0.122092         0.122092    0.885067\n",
+      "post_cart_ther_spec_2___3    -0.119072         0.119072    0.887743\n",
+      "\n",
+      "💡 Interpretation Guide:\n",
+      "   Positive coefficient → Increases death probability\n",
+      "   Negative coefficient → Decreases death probability\n",
+      "   Larger |coefficient| → Stronger effect\n",
+      "\n",
+      "🎯 Top Positive Predictors (Increase Risk):\n",
+      "   • post_cart_ther_spec_2___5: 0.278 (OR: 1.32)\n",
+      "   • cli_st_leukocytes: 0.241 (OR: 1.27)\n",
+      "   • ae_summ_crs_v2: 0.162 (OR: 1.18)\n",
+      "\n",
+      "🎯 Top Negative Predictors (Decrease Risk):\n",
+      "   • post_cart_ther: -0.298 (OR: 0.74)\n",
+      "   • tr_car_bridg_type: -0.185 (OR: 0.83)\n",
+      "   • tr_car_br: -0.158 (OR: 0.85)\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "print(\"\\n\" + \"=\"*70)\n",
+    "print(\"FEATURE COEFFICIENTS ANALYSIS\")\n",
+    "print(\"=\"*70)\n",
+    "\n",
+    "# Create coefficients DataFrame\n",
+    "coef_df = pd.DataFrame({\n",
+    "    'Feature': X.columns,\n",
+    "    'Coefficient': coefficients,\n",
+    "    'Abs_Coefficient': np.abs(coefficients),\n",
+    "    'Odds_Ratio': np.exp(coefficients)\n",
+    "}).sort_values('Abs_Coefficient', ascending=False)\n",
+    "\n",
+    "print(f\"\\n📊 Top 10 Most Important Features:\")\n",
+    "print(coef_df.head(10).to_string(index=False))\n",
+    "\n",
+    "print(f\"\\n💡 Interpretation Guide:\")\n",
+    "print(f\"   Positive coefficient → Increases death probability\")\n",
+    "print(f\"   Negative coefficient → Decreases death probability\")\n",
+    "print(f\"   Larger |coefficient| → Stronger effect\")\n",
+    "\n",
+    "print(f\"\\n🎯 Top Positive Predictors (Increase Risk):\")\n",
+    "top_positive = coef_df[coef_df['Coefficient'] > 0].head(3)\n",
+    "for _, row in top_positive.iterrows():\n",
+    "    print(f\"   • {row['Feature']}: {row['Coefficient']:.3f} (OR: {row['Odds_Ratio']:.2f})\")\n",
+    "\n",
+    "print(f\"\\n🎯 Top Negative Predictors (Decrease Risk):\")\n",
+    "top_negative = coef_df[coef_df['Coefficient'] < 0].head(3)\n",
+    "for _, row in top_negative.iterrows():\n",
+    "    print(f\"   • {row['Feature']}: {row['Coefficient']:.3f} (OR: {row['Odds_Ratio']:.2f})\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8fb52401",
+   "metadata": {},
+   "source": [
+    "**Our model identified several modifiable risk factors. Patients who received post-CAR-T consolidation therapy had better survival (26% risk reduction). However, large fluctuations in leukocyte counts (OR=1.27) and severe cytokine release syndrome (OR=1.18) were associated with increased mortality. The type of bridging therapy also influenced outcomes, with certain approaches showing protective effects (17% risk reduction).**"
    ]
   }
  ],
