edited inner cv

--- a/ali/radiomics_delta_analysis.ipynb
+++ b/ali/radiomics_delta_analysis.ipynb
@@ -6351,7 +6351,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_83967/2612493327.py:2: SettingWithCopyWarning: \n",
+      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_25669/2612493327.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -7394,7 +7394,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_83967/3391465230.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
+      "/var/folders/j1/7_xnc0px14n2zmk807646pfh0000gn/T/ipykernel_25669/3391465230.py:1: FutureWarning: Downcasting behavior in `replace` is deprecated and will be removed in a future version. To retain the old behavior, explicitly call `result.infer_objects(copy=False)`. To opt-in to the future behavior, set `pd.set_option('future.no_silent_downcasting', True)`\n",
       "  clinic_data_cleaned.replace({'NE': np.nan}, inplace=True)\n"
      ]
     }
@@ -11308,7 +11308,13 @@
    ],
    "source": [
     "svm_param_grid = default_svm_param_grid()\n",
-    "svm_inner_cv = make_inner_cv(n_splits=5, random_state=42)\n",
+    "\n",
+    "min_class = int(y_train.value_counts().min())\n",
+    "safe_splits = max(2, min(5, min_class))\n",
+    "if safe_splits < 5:\n",
+    "    print(f\"Reducing inner CV folds to {safe_splits} (min_class={min_class}) to avoid single-class folds.\")\n",
+    "\n",
+    "svm_inner_cv = make_inner_cv(n_splits=safe_splits, random_state=42)\n",
     "\n",
     "svm_results, svm_fitted_models = fit_gridsearch_and_evaluate(\n",
     "    X_splits=X_splits,\n",
@@ -11320,7 +11326,7 @@
     "    scoring=\"roc_auc\",\n",
     "    n_jobs=-1,\n",
     "    verbose=True,\n",
-    ")\n"
+    ")"
    ]
   },
   {
@@ -11451,7 +11457,13 @@
    ],
    "source": [
     "rf_param_grid = default_rf_param_grid()\n",
-    "rf_inner_cv = make_inner_cv(n_splits=5, random_state=42)\n",
+    "\n",
+    "min_class = int(y_train.value_counts().min())\n",
+    "safe_splits = max(2, min(5, min_class))\n",
+    "if safe_splits < 5:\n",
+    "    print(f\"Reducing inner CV folds to {safe_splits} (min_class={min_class}) to avoid single-class folds.\")\n",
+    "\n",
+    "rf_inner_cv = make_inner_cv(n_splits=safe_splits, random_state=42)\n",
     "\n",
     "rf_results, rf_fitted_models = fit_gridsearch_and_evaluate(\n",
     "    X_splits=X_splits,\n",
@@ -11506,7 +11518,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "77e90456",
    "metadata": {},
    "outputs": [
